--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".MediatekaActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".SearchActivity.SearchActivity"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
