--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
 
     //koin
     implementation "io.insert-koin:koin-android:3.5.0"
+
+    //fragments
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
+    //ViewPager
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
 }
