--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,10 @@
         <activity
             android:name=".audio_player_activity.ui.AudioPlayerActivity"
             android:exported="false" />
-        <activity
-            android:name=".mediateka_activity.ui.MediatekaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".search_activity.ui.SearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".settings_activity.ui.SettingsActivity"
-            android:exported="false" />
+
         <activity
             android:name=".main_activity.ui.MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
