--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.6"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.6"
     implementation "androidx.fragment:fragment-ktx:1.6.2"
+
+    //coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
 }
